# feel

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  appveyor.yml
docs/: GettingStarted.md  Introduction.md
hello-feel/src/: main.cpp
include/: Feel.hpp  Finger.hpp  IncomingMessage.hpp  SerialConnection.hpp
libfeel/: CMakeLists.txt
libfeel/include/: CalibrationData.hpp  Device.hpp  DeviceStatus.hpp  Feel.hpp  FeelStatus.hpp  IncomingMessage.hpp  SerialDevice.hpp  SimulatorDevice.hpp  feel.hpp
libfeel/include/feel/: CalibrationData.hpp  Device.hpp  DeviceStatus.hpp  Feel.hpp  IncomingMessage.hpp  SerialDevice.hpp  SimulatorDevice.hpp
libfeelc/: CMakeLists.txt
libfeelc/src/: libfeel.cpp
src/: main.cpp
